--- a/miyahuna/templates/js.html
+++ b/miyahuna/templates/js.html
@@ -14,4 +14,5 @@
       <script src="{% static 'js/common.js' %}"></script>
       <script src="{% static 'js/jquery.bootstrap.modal.forms.min.js' %}"></script>
       <script src="{% static 'js/common.js' %}"></script>
+      <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
       <script src="{% static 'js/1.js' %}"></script>
