--- a/miyahuna/templates/nav.html
+++ b/miyahuna/templates/nav.html
@@ -1,8 +1,10 @@
 {% load static %}
+
+
 <nav class="d-print-none navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
          <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-            <a class="navbar-brand brand-logo" href="https://marketsnap.herokuapp.com/"><img src="{% static 'imgs/logo.png' %}" alt="logo"></a>
-            <a class="navbar-brand brand-logo-mini" href="https://marketsnap.herokuapp.com/"><img src="logo1.png" alt="{% static 'imgs/logoMini.png' %}"></a>
+            <a class="navbar-brand brand-logo" href="{% url 'mainpanel' %}"><img src="{% static 'imgs/logo.png' %}" alt="logo"></a>
+            <a class="navbar-brand brand-logo-mini" href="{% url 'mainpanel' %}"><img src="{% static 'imgs/logoMini.png' %}" alt="Mini Logo"></a>
          </div>
          <div class="navbar-menu-wrapper d-flex align-items-stretch">
             <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -23,7 +25,7 @@
                      <a class="dropdown-item" href="https://marketsnap.herokuapp.com/accounts/me/">
                      <i class="mdi mdi-account mr-2 text-primary"></i> الملف الشخصي
                      </a>
-                     <a class="dropdown-item" href="https://marketsnap.herokuapp.com/accounts/logout/?next=/accounts/login/">
+                     <a class="dropdown-item" href="{% url 'logout' %}">
                      <i class="mdi mdi-logout mr-2 text-primary"></i> تسجيل الخروج
                      </a>
                   </div>
