--- a/miyahuna/customers/templates/customers/updateCustomer.html
+++ b/miyahuna/customers/templates/customers/updateCustomer.html
@@ -9,7 +9,7 @@
 {% for field in form %}
     {{ field.errors }}
 {% endfor %}
-<form action="{% url 'CreateCustomer' %}" method='post'>
+<form action="{% url 'UpdateCustomer' object.user_customer.first.pk %}" method='post'>
     {% csrf_token %}
 
 {% for field in form %}
