--- a/miyahuna/templates/sidebar.html
+++ b/miyahuna/templates/sidebar.html
@@ -8,7 +8,7 @@
                      <i class="mdi mdi-home menu-icon"></i>
                      </a>
                   </li>
-                  <li class="nav-item {% if request.get_full_path == customer_list %}active{% endif %}">
+                  <li class="nav-item {% if 'customers' in request.get_full_path %}active{% endif %}">
                      <a class="nav-link " href="{{customer_list}}">
                      <span class="menu-title">المشتركين</span>
                      <i class="mdi mdi-account-group menu-icon"></i>
