--- a/miyahuna/employees/templates/employees/employeesList.html
+++ b/miyahuna/employees/templates/employees/employeesList.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load static %}
 {% block cardtitle %}
-    {% translate 'Customers' %}
+    {% translate 'Employees' %}
 {% endblock %}
 {% block css %}
    <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap4.min.css' %}">
@@ -16,23 +16,23 @@
 {% block content %}
 
 
-                        <table  id="customersList" data-server-side="false" data-ajax="http://127.0.0.1:8000/customers/api/list/?format=datatables" class="table table-hover dt-responsive nowrap">
+                        <table  id="employeesList" data-server-side="false" data-ajax="http://127.0.0.1:8000/employees/api/list/?format=datatables" class="table table-hover dt-responsive nowrap">
                            <thead>
                               <tr>
                                  <th data-data="null"></th>
-                                 <th data-data="customer_name">{% translate "Full name" %}</th>
-                                 <th data-data="customer_PhoneNumber" >{% translate "Phone number" %}</th>
-                                 <th data-data="customer_lastOrderDate">{% translate "Last order date" %}</th>
-                                 <th data-data="price_per_gallon">{% translate "Price per gallon" %}</th>
-                                  <th>{% translate 'actions' %}</th>
+                                 <th data-data="employee_name">{% translate "Full name" %}</th>
+                                 <th data-data="employee_PhoneNumber" >{% translate "Phone number" %}</th>
+                                 <th data-data="salary_per_day">{% translate "salary per day" %}</th>
+                                 <th data-data="is_data_entry">{% translate "data entry" %}</th>
                               </tr>
                            </thead>
                         </table>
 {% endblock %}
-{% block js %}
+{% block js %}a
 
 <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
 <script src="{% static 'js/dataTables.bootstrap4.min.js' %}"></script>
 <script src="{% static 'js/dataTables.buttons.min.js' %}"></script>
-<script src="{% static 'js/customersList.js' %}"></script>
+<script src="{% static 'js/employeesList.js' %}"></script>
+
 {% endblock %}
