--- a/miyahuna/employees/templates/employees/employeesList.html
+++ b/miyahuna/employees/templates/employees/employeesList.html
@@ -24,6 +24,7 @@
                                  <th data-data="employee_PhoneNumber" >{% translate "Phone number" %}</th>
                                  <th data-data="salary_per_day">{% translate "salary per day" %}</th>
                                  <th data-data="is_data_entry">{% translate "data entry" %}</th>
+                                  <th>{% translate 'actions' %}</th>
                               </tr>
                            </thead>
                         </table>
