--- a/miyahuna/employees/templates/employees/updateEmployee.html
+++ b/miyahuna/employees/templates/employees/updateEmployee.html
@@ -2,14 +2,14 @@
 {% load static %}
 {% load i18n %}
 {% block cardtitle %}
-    {% translate 'update customer' %}
+    {% translate 'update employee' %}
 {% endblock %}
 
 {% block content %}
 {% for field in form %}
     {{ field.errors }}
 {% endfor %}
-<form action="{% url 'UpdateCustomer' object.user_customer.first.pk %}" method='post'>
+<form action="{% url 'UpdateEmployee' object.employee_user.pk %}" method='post'>
     {% csrf_token %}
 
 {% for field in form %}
