--- a/miyahuna/templates/js.html
+++ b/miyahuna/templates/js.html
@@ -2,6 +2,7 @@
 
 <!--      <script src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>-->
       <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
+      <script src="{% static 'js/popper.min.js' %}"></script>
        <script src="{% static 'js/bootstrap.min.js' %}"></script>
       <script src="{% static 'js/chart.min.js' %}"></script>
       <script src="{% static 'js/moment.min.js' %}"></script>
