--- a/miyahuna/employees/templates/employees/employeesList.html
+++ b/miyahuna/employees/templates/employees/employeesList.html
@@ -11,6 +11,10 @@
         .form-group {
             margin-bottom : 0.3rem;
          }
+
+         .badge:empty{
+            display:inline-block;
+         }
     </style>
 {% endblock %}
 {% block content %}
