--- a/miyahuna/templates/base.html
+++ b/miyahuna/templates/base.html
@@ -32,7 +32,7 @@
             </div>
             <footer class="footer">
                <div class="d-sm-flex justify-content-center justify-content-sm-between">
-                  <span class="text-muted text-center text-sm-left d-block d-sm-inline-block"><span>2021</span> @ Miyahuna</span>
+                  <span class="text-muted text-center text-sm-left d-block d-sm-inline-block"><span>{% now "Y" %}</span> @ Miyahuna</span>
                </div>
             </footer>
          </div>
