--- a/miyahuna/templates/sidebar.html
+++ b/miyahuna/templates/sidebar.html
@@ -14,7 +14,7 @@
                   <li class="nav-item {% if 'employees' in request.get_full_path %}active{% endif %}">
                      <a class="nav-link " href="{{employees_list}}">
                      <span class="menu-title">{% translate 'employees' %}</span>
-                     <i class="mdi mdi-account-group menu-icon"></i>
+                     <i class="mdi mdi-human-capacity-increase menu-icon"></i>
                      </a>
                   </li>
                   <li class="nav-item {% if 'customers' in request.get_full_path %}active{% endif %}">
